[package]
name = "rust-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = "0.93.1"
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["macros"] }
serde_json = "1.0.124"
indicatif = "0.17.8"
rusqlite = "0.32.1"
tui = "0.17"
crossterm = "0.22"
